# sf

./: .Rbuildignore  .gitattributes  .gitignore  .travis.yml  404.html  CONDUCT.html  CONDUCT.md  DESCRIPTION  DESIGN.md  LICENSE  LICENSE-text.html  LICENSE-text.md  NAMESPACE  NEWS.md  PROPOSAL.html  PROPOSAL.md  README.md  _pkgdown.yml  appveyor.yml  authors.html  authors.md  blog  cleanup  codecov.yml  configure  configure.ac  configure.in  configure.win  index.html  index.md  llms.txt  pkgdown.yml  proj_conf_test  proj_conf_test.c  proj_conf_test.cpp  search.json  sf.Rproj  sitemap.xml  spatial-tutorial.Rmd  st_cast2.r  (+2 more)
.github/ISSUE_TEMPLATE/: bug_report.md  other_issue.md
.github/workflows/: R-CMD-check-with-db.yaml  R-CMD-check.yaml  pkgdown.yaml  pkgdown.yml  rcmdcheck.yml  stale.yml  test-coverage.yaml  tic-db.yml  tic.yml  update-tic.yml
R/: RcppExports.R  aggregate.R  agr.R  arith.R  attr.R  bbox.R  bind.R  bounding_circle.R  break_antimeridian.R  cast-individual.R  cast.R  cast_sfc.R  cast_sfg.R  collection_extract.R  collectionextract.R  crop.R  crs.R  datasets.R  db.R  defunct.R  deprecated.R  gdal_utils.R  geohash.R  geom-measures.R  geom-predicates.R  geom-transformers.R  geom.R  geos-overlayng.R  geos.R  geos_binary_pred.R  graticule.R  grid.R  import-standalone-s3-register.R  init.R  jitter.R  join.R  lwgeom.R  m_range.R  make_grid.R  maps.R  (+37 more)
articles/: index.html  index.md  sf1.html  sf1.md  sf2.html  sf2.md  sf3.html  sf3.md  sf4.html  sf4.md  sf5.html  sf5.md  sf6.html  sf6.md  sf7.html  sf7.md
data/: bgmap.rda
demo/: 00Index  affine.R  basic.R  bm_wkb.R  ggplot.R  meuse_sf.R  nc.R  twitter.R  webmap.R
docs/: LICENSE  LICENSE.html  authors.html  index.html  pkgdown.css  pkgdown.js
docs/articles/: index.html  nc.dbf  nc.gpkg  nc1.dbf  rw.html  sf.fig  sf.html  sf1.html  sf2.html  sf3.html  sf4.html  sf5.html  sf6.html  sf_read.html  sfr.html
docs/news/: index.html
docs/reference/: Ops.html  Ops.sfg.html  aggregate.sf.html  as_Spatial.html  bgMap.html  bind.html  coerce-methods.html  crs.html  dbDataType.html  db_drivers.html  dplyr.html  extension_map.html  gdal.html  gdal_utils.html  geos.html  geos_binary_ops.html  geos_binary_pred.html  geos_combine.html  geos_measures.html  geos_query.html  geos_unary.html  index.html  internal.html  is_driver_available.html  is_driver_can.html  merge.sf.html  nc.dbf  nc.shp  nc.shp.dbf  nc.shp.prj  nc.shp.shx  ops.html  plot.html  prefix_map.html  rawToHex.html  reexports.html  sf-deprecated.html  sf.html  sf_extSoftVersion.html  sf_project.html  (+46 more)
inst/: CITATION  Dockerfile
inst/csv/: pt.csv
inst/docker/: Dockerfile  README.md
inst/gml/: fmi_test.gml
inst/gpkg/: b_pump.gpkg  buildings.gpkg  grd_addr.gpkg  nc.gpkg  nospatial.gpkg  tl.gpkg
inst/include/: bbox.h  sf.h  sf_RcppExports.h  wkb.h
inst/nc/: cropped.nc  zarr.py
inst/osm/: overpass.osm
inst/shape/: nc.dbf  olinda1.dbf  olinda1.prj  olinda1.shp  olinda1.shx  storms_xyz.shp  storms_xyz_feature.dbf  storms_xyz_feature.shx  storms_xyzm.dbf  storms_xyzm.shp  storms_xyzm_feature.shx
inst/sqlite/: b.sqlite  meuse.sqlite  nc.sqlite  test3.sqlite
man/: GEOMETRYCOLLECTION.Rd  LINESTRING.Rd  MULTILINESTRING.Rd  MULTIPOINT.Rd  MULTIPOLYGON.Rd  Ops.Rd  Ops.sfg.Rd  POINT.Rd  POLYGON.Rd  ST.Rd  ST_as.WKB.Rd  ST_as.WKT.Rd  ST_as.sf.Rd  ST_as.sf.Spatial.Rd  ST_as.sfc.Rd  ST_as.sfc.SpatialLines.Rd  ST_as.sfc.SpatialPolygons.Rd  ST_read.Rd  ST_sf.Rd  ST_sfc.Rd  aggregate.sf.Rd  as.WKT.Rd  as.sf.Rd  as.sf.Spatial.Rd  as.sfc.Rd  as.sfc.SpatialLines.Rd  as.sfc.SpatialPolygons.Rd  as_Spatial.Rd  bbox.Rd  bgMap.Rd  bind.Rd  bounding_circle.Rd  coerce-methods.Rd  crs.Rd  dbDataType.Rd  dbWriteTable.Rd  db_drivers.Rd  dot-stop_geos.Rd  dplyr.Rd  extension_map.Rd  (+124 more)
news/: index.html  index.md
proj_conf_test.dSYM/Contents/: Info.plist
reference/: .image_scale_factor.html  Ops.html  Ops.md  Ops.sfc.html  [.sf.html  [.sfc.html  aggregate.html  aggregate.sf.html  aggregate.sf.md  bind.html  bind.md  cbind.sf.html  coerce-methods.html  coerce-methods.md  dbDataType,DBIObject,sf-method.html  dbDataType.html  dbDataType.md  dbWriteTable,DBIObject,character,sf-method.html  dbWriteTable.html  dbWriteTable.md  db_drivers.html  db_drivers.md  distinct.sf.html  dot-stop_geos.html  dot-stop_geos.md  extension_map.html  extension_map.md  format.sfg.html  gdal.html  gdal.md  gdal_addo.html  gdal_addo.md  gdal_compressors.html  gdal_compressors.md  gdal_read.html  gdal_utils.html  gdal_utils.md  geos_binary_ops.html  geos_binary_ops.md  geos_binary_pred.html  (+194 more)
src/: Makevars.in  Makevars.ucrt  Makevars.win  RcppExports.cpp  bbox.cpp  bbox.h  boost.cpp  export.cpp  gdal.cpp  gdal.h  gdal_geom.cpp  gdal_read.cpp  gdal_read.h  gdal_read_stream.cpp  gdal_sf_pkg.h  gdal_utils.cpp  gdal_write.cpp  geos.cpp  hex.cpp  hex.h  init.c  lwgeom.cpp  mdim.cpp  mdm.cpp  openmp.cpp  openmp.h  ops.cpp  polygonize.cpp  proj.cpp  proj.cpp~  proj6.cpp  proj_info.cpp  raster2sf.cpp  sfc-sfg.cpp  signed_area.cpp  stars.cpp  tbb.cpp  tbb.h  wkb.cpp  wkb.h  (+4 more)
tests/: aggregate.R  aggregate.Rout.save  bgmap.rda  cast.R  cast.Rout.save  crs.R  crs.Rout.save  dist.R  dist.Rout.save  dplyr.R  dplyr.Rout.save  empty.R  empty.Rout.save  full.R  full.Rout.save  gdal_geom.R  gdal_geom.Rout.save  geos.R  geos.Rout.save  graticule.R  graticule.Rout.save  grid.R  grid.Rout.save  maps.R  maps.Rout.save  pg.R  pg.Rout.save  plot.R  plot.Rout.save  read.R  read.Rout.save  roundtrip.R  roundtrip.Rout.save  s2.R  s2.Rout.save  sample.R  sample.Rout.save  sfc.R  sfc.Rout.save  sfg.R  (+21 more)
tests/testthat/: deprecated-db.R  s2.R  test-aw.R  test-crs.R  test-gdal.R  test-geos.R  test-grid.R  test-normalize.R  test-plot.R  test-postgis_ODBC.R  test-postgis_RPostgreSQL.R  test-postgis_RPostgres.R  test-read.R  test-recenter.R  test-s2.R  test-sample.R  test-sfc.R  test-sfg.R  test-shift_longitude.R  test-sp.R  test-st_cast.R  test-tidyverse-vctrs.R  test-tidyverse.R  (+43 more)
tools/: winlibs.R
vignettes/: basic.Rmd  sf.xfig  sf1.Rmd  sf2.Rmd  sf3.Rmd  sf4.Rmd  sf5.Rmd  sf6.Rmd  sf7.Rmd  sf_fig.drawio  sfr.Rmd  sfr.html
(+26 files in other folders)
