dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/wkb.cpp)

: ${R_HOME=`R RHOME`}
if test -z "${R_HOME}"; then
  echo "could not determine R_HOME"
  exit 1
fi

# compile Rcpp stuff:
${R_HOME}/bin/Rscript -e "Rcpp:::compileAttributes()"

if test ! -e src/RcppExports.cpp
then
  echo ''
  echo 'For some reason Rcpp is not working.'
  echo 'Is it installed?'
  echo ''
  exit 1
fi

# generate docs & NAMESPACE:
${R_HOME}/bin/Rscript -e 'roxygen2::roxygenise(roclets = c("namespace", "rd"))'

if test ! -e man/sf.Rd
then
  echo ''
  echo 'For some reason roxygen2 is not working.'
  echo 'Is it installed?'
  echo ''
  exit 1
fi

if test `gdal-config --version`
then
  echo "linking against gdal version" `gdal-config --version`
  GDAL_CPPFLAGS=`gdal-config --cflags`
  GDAL_LIBS=`gdal-config --libs`
else
    echo 'Unable to find gdal-dev'
    exit 1
fi

GEOS_CONFIG=`which geos-config`
if test `geos-config --version`
then
  echo "linking against geos version" `geos-config --version`
  GEOS_LIBS=`geos-config --libs`
  GEOS_CPPFLAGS=`geos-config --cflags`
else
  echo "no geos support: geos++-dev not installed"
  exit 1
fi
#AC_SUBST([PKG_CPPFLAGS],["${PKG_CPPFLAGS} ${GEOS_CPPFLAGS}"])
#AC_SUBST([PKG_LIBS],["${PKG_LIBS} ${GEOS_LIBS}"])

AC_SUBST([PKG_CPPFLAGS],["${PKG_CPPFLAGS} ${GDAL_CPPFLAGS} ${GEOS_CPPFLAGS}"])
AC_SUBST([PKG_LIBS],["${PKG_LIBS} ${GDAL_LIBS} ${GEOS_LIBS}"])

AC_CONFIG_FILES(src/Makevars)
AC_OUTPUT
